# alpha_features_core

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
alpha_features_core/: __init__.py  alpha191.py  bridge.py
alpha_features_src/: CMakeLists.txt  alpha_features_core.cpp  alpha_features_core.h  bindings.cpp
